--- a/charts/platform-base/charts/tp-cp-o11y/values.yaml
+++ b/charts/platform-base/charts/tp-cp-o11y/values.yaml
@@ -32,7 +32,7 @@ global:
           name: "common-fluentbit"
           registry: ""
           repo: ""
-          tag: 4.0.8
+          tag: 4.1.0
           pullPolicy: IfNotPresent
         securityContext:
           runAsNonRoot: false
@@ -79,7 +79,7 @@ probes:
 image:
   name: "o11y-service"
   pullPolicy: IfNotPresent
-  tag: 3144
+  tag: 3308
 
 tibcoRouter:
   path: /o11y
@@ -107,7 +107,7 @@ capabilities:
       releaseNotes: "Enhancements, Bug fixes, etc."
       # helm chart and image version for o11y service, default helm chart version is latest
       o11yservice:
-        version: "1.11.5"
+        version: "1.12.10"
       # helm chart and image version for opentelemetry collector, default helm chart version is latest
       opentelemetryCollector:
         version: "0.116.4"
@@ -125,7 +125,7 @@ capabilities:
       releaseNotes: "Enhancements, Bug fixes, etc."
       # helm chart and image version for o11y service, default helm chart version is latest
       o11yservice:
-        version: "1.11.5"
+        version: "1.12.10"
       # helm chart and image version for opentelemetry collector, default helm chart version is latest
       opentelemetryCollector:
         version: "0.116.4"
@@ -170,3 +170,16 @@ securityContext:
   capabilities:
     drop:
       - ALL
+
+o11ymcpserver:
+  enabled: false
+  image:
+    name: o11y-mcp-service
+    tag: "59"
+  resources:
+    requests:
+      cpu: 100m
+      memory: 256Mi
+    limits:
+      cpu: 200m
+      memory: 512Mi
