--- a/charts/tibco-cp-addon-eventprocessing/Chart.yaml
+++ b/charts/tibco-cp-addon-eventprocessing/Chart.yaml
@@ -8,7 +8,7 @@ apiVersion: v2
 name: tibco-cp-addon-eventprocessing
 description: TIBCO Platform chart for BE addon
 type: application
-version: 1.12.0-alpha.2
+version: 1.12.0
 appVersion: "1.12.0"
 keywords:
   - tibco-platform
