--- a/charts/tibco-cp-devhub/charts/tibcohub-recipes/Chart.yaml
+++ b/charts/tibco-cp-devhub/charts/tibcohub-recipes/Chart.yaml
@@ -3,12 +3,12 @@
 # in the license file that is distributed with this file.
 
 apiVersion: v2
-name: tp-cp-tibcohub-recipes
+name: tibcohub-recipes
 description: TIBCO Developer Hub Data Plane Recipes
 home: https://github.com/tibco/tp-dev-hub.git
 type: application
-version: 1.12.10
-appVersion: "1.12.0"
+version: 1.13.7
+appVersion: "1.13.0"
 keywords:
   - tibco-platform
   - control-plane
@@ -17,4 +17,4 @@ maintainers:
     email: compute-dev@tibco.com
 annotations:
   app.helm.sh/component: control-plane
-  app.helm.sh/name: tp-cp-tibcohub-recipes
+  app.helm.sh/name: tibcohub-recipes
