--- a/charts/tibco-cp-devhub/charts/tibcohub-recipes/templates/tibcohub.yaml
+++ b/charts/tibco-cp-devhub/charts/tibcohub-recipes/templates/tibcohub.yaml
@@ -5,14 +5,14 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "tp-cp-tibcohub-recipes.consts.appName" . }}-tibcohub
+  name: {{ include "tibcohub-recipes.consts.appName" . }}-tibcohub
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "tp-cp-tibcohub-recipes.labels" . | nindent 4 }}
+    {{- include "tibcohub-recipes.labels" . | nindent 4 }}
 data:
   version.json: |
     {
-      "capabilityVersion": "1.12.0",
+      "capabilityVersion": "1.13.0",
       "minCPVersion": "1.12.0",
       "maxCPVersion": "",
       "releaseDate": {{ .Values.capabilities.tibcohub.releaseDate | quote }},
@@ -73,7 +73,7 @@ data:
     recipe:
       helmCharts:
       - name: tibco-developer-hub
-        version: "1.12.10"
+        version: "1.13.5"
         namespace: ${NAMESPACE}
         repository:
           chartMuseum:
@@ -112,24 +112,27 @@ data:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ include "tp-cp-tibcohub-recipes.consts.appName" . }}-tibcohub-{{ randAlphaNum 4 | lower }}
+  name: {{ include "tibcohub-recipes.consts.appName" . }}-tibcohub-{{ randAlphaNum 4 | lower }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "tp-cp-tibcohub-recipes.labels" . | nindent 4 }}
+    {{- include "tibcohub-recipes.labels" . | nindent 4 }}
 spec:
-  ttlSecondsAfterFinished: 750
+  backoffLimit: 0
+  ttlSecondsAfterFinished: 3600
   template:
     metadata:
       labels:
-        {{- include "tp-cp-tibcohub-recipes.labels" . | nindent 8 }}
+        {{- include "tibcohub-recipes.labels" . | nindent 8 }}
     spec:
     {{- if .Values.podSecurityContext }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
     {{- end }}
+      nodeSelector:
+        kubernetes.io/os: linux
       containers:
       - name: tibcohub
-        image: {{ include "tp-cp-tibcohub-recipes.image.registry" .}}{{"/"}}{{ include "tp-cp-tibcohub-recipes.image.repository" .}}{{"/"}}{{ .Values.image.name }}:{{ .Values.image.tag}}
+        image: {{ include "tibcohub-recipes.image.registry" .}}{{"/"}}{{ include "tibcohub-recipes.image.repository" .}}{{"/"}}{{ .Values.image.name }}:{{ .Values.image.tag}}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         {{- with .Values.probes.startupProbe }}
         startupProbe:
@@ -139,7 +142,7 @@ spec:
         securityContext:
         {{- toYaml .Values.securityContext | nindent 10 }}
         {{- end }}
-        {{- if eq (include "tp-cp-tibcohub-recipes.enableResourceConstraints" . ) "true" }}
+        {{- if eq (include "tibcohub-recipes.enableResourceConstraints" . ) "true" }}
         resources:
         {{- toYaml .Values.scripts.resources | nindent 10 }}
         {{- end }}
@@ -151,7 +154,7 @@ spec:
         - name: RECIPE_TARGET_LOCATION
           value: "/private/tsc/config/capabilities/platform"
         - name: RECIPE_RELEASE_VERSION
-          value: "1.12.0"
+          value: "1.13.0"
         - name: SPACE_SEPARATED_UNSUPPORTED_RECIPE_VERSIONS
           value: ""
         - name: OVERWRITE_RECIPE
@@ -159,28 +162,32 @@ spec:
         - name: IS_LATEST
           value: {{ .Values.capabilities.tibcohub.isLatest | quote }}
         volumeMounts:
-        - name: {{ include "tp-cp-tibcohub-recipes.consts.appName" . }}-tibcohub-volume
+        - name: {{ include "tibcohub-recipes.consts.appName" . }}-tibcohub-volume
           mountPath: /opt/tibco/recipe
         - name: scripts-config-volume
           mountPath: /opt/tibco/scripts
         - name: store-vol
           mountPath: /private/tsc/config
           subPath: tsc/config
+        - name: tmp-vol
+          mountPath: /tmp
         command: ["sh"]
         args: ["-c", "/opt/tibco/scripts/run.sh"]
       restartPolicy: Never
       volumes:
-        - name: {{ include "tp-cp-tibcohub-recipes.consts.appName" . }}-tibcohub-volume
+        - name: {{ include "tibcohub-recipes.consts.appName" . }}-tibcohub-volume
           configMap:
-            name: {{ include "tp-cp-tibcohub-recipes.consts.appName" . }}-tibcohub
+            name: {{ include "tibcohub-recipes.consts.appName" . }}-tibcohub
         - name: scripts-config-volume
           configMap:
-            name: {{ include "tp-cp-tibcohub-recipes.consts.appName" . }}-script
+            name: {{ include "tibcohub-recipes.consts.appName" . }}-script
             defaultMode: 0777
         - name: store-vol
           persistentVolumeClaim:
-            claimName: {{ include "tp-cp-tibcohub-recipes.pvc-name" . }}
+            claimName: {{ include "tibcohub-recipes.pvc-name" . }}
+        - emptyDir: {}
+          name: tmp-vol
+{{- if (include "tibcohub-recipes.container-registry.secret" .) }}
       imagePullSecrets:
-        {{- if (include "tp-cp-tibcohub-recipes.container-registry.secret" .) }}
-        - name: {{ include "tp-cp-tibcohub-recipes.container-registry.secret" . }}
-        {{- end}}
+        - name: {{ include "tibcohub-recipes.container-registry.secret" . }}
+{{- end }}
